# aula20_python_crud

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  router.py  schemas.py
